[/] kafka configuration